--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,6 @@
-name: Publish package to GitHub Packages
+name: Build
 on:
-  release:
-    types: [created]
+  push
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -18,7 +17,3 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
       - name: Build
         run: ./gradlew build
-      - name: Publish package
-        run: ./gradlew publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
