--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build
-        run: ./gradlew build
+        run: ./gradlew clean build
