Updated build pipeline

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,12 @@
 name: Build
 on:
   push:
+      branches:
+        - 'main'
+        - 'develop'
+        - 'develop/**'
+        - 'feature/**'
+        - 'release/**'
       tags-ignore:
         - '**'
   workflow_call:
